<resources>
    <string name="app_name">Just Java</string>
    <string name="name">Name: </string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="quantity">Quantity: </string>
    <string name="flavour">Flavour</string>
    <string name="order">Order</string>
    <string name="order_coffee">Order Coffee</string>
    <string name="toast_more_than">You cannot order more than 10 coffees.</string>
    <string name="toast_less_than">You cannot order less than 1 coffee.</string>
    <string name="toppings">Toppings</string>
    <string name="add_whipped_cream">Add whipped cream?</string>
    <string name="add_chocolate">Add chocolate?</string>
    <string name="add_caramel">Add caramel?</string>
    <string name="thank_you">Thank you!</string>
    <string name="caramel">Caramel</string>
    <string name="icecream_flavour">Icecream flavour: </string>

    <string-array name="listOfFlavours">
        <item>@string/caramel_flavour</item>
        <item>Chocolate</item>
        <item>@string/strawberry</item>
        <item>@string/vanilla</item>
    </string-array>
    <string name="caramel_flavour">caramel</string>
    <string name="strawberry">Strawberry</string>
    <string name="vanilla">Vanilla</string>


</resources>
