<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.ordericecream.MainActivity">

        <EditText
            android:id="@+id/set_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text|textCapWords"
            android:imeOptions="actionDone"/>

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/flavour" />

        <Spinner
            android:id="@+id/flavour_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/toppings" />

        <CheckBox
            android:id="@+id/whipped_cream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strawberry"
            android:paddingLeft="24dp"
            android:textSize="16sp"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/chocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Chocolate"
            android:paddingLeft="24dp"
            android:textSize="16sp"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/caramel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caramel"
            android:paddingLeft="24dp"
            android:textSize="16sp"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/plus_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrement"
                android:text="-" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"/>

            <Button
                android:id="@+id/menus_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="+" />
        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:text="@string/order" />
    </LinearLayout>
</ScrollView>